# zatgo-space

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: CHANGELOG.md  api.md  architecture.md  deployment.md  developer.md  installation.md  user_manual.md
zatgo_space/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
zatgo_space/api/: __init__.py  response.py  validators.py
zatgo_space/api/v1/: __init__.py  space.py
zatgo_space/config/: __init__.py  desktop.py  docs.py
zatgo_space/permissions/: __init__.py  company_scope.py
zatgo_space/repositories/: __init__.py
zatgo_space/services/: __init__.py
zatgo_space/tests/: __init__.py
zatgo_space/tests/api/: .gitkeep
zatgo_space/tests/integration/: .gitkeep
zatgo_space/tests/permissions/: .gitkeep
zatgo_space/tests/unit/: test_api_response.py  test_app_import.py
zatgo_space/tests/workflow/: .gitkeep
zatgo_space/utils/: __init__.py  logging.py
zatgo_space/workflow/: __init__.py
zatgo_space/zatgo_space/doctype/space_job_log/: space_job_log.json  space_job_log.py
zatgo_space/zatgo_space/doctype/space_order/: space_order.json  space_order.py
zatgo_space/zatgo_space/doctype/space_order_app/: space_order_app.json  space_order_app.py
zatgo_space/zatgo_space/doctype/space_plan/: space_plan.json  space_plan.py
zatgo_space/zatgo_space/doctype/space_settings/: space_settings.json  space_settings.py
