[project]
name = "zatgo_space"
version = "0.1.0"
description = "ZatGo Space — ERPNext custom application"
authors = [{ name = "ZatGo Innovation" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zatgo_space*"]
